--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
             background-color: #333;
             font-family: helvetica;
         }
-
+        
         li {
             float: left;
         }
@@ -37,6 +37,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <img src="C&R Logo.tif" alt="">
         <ul>
             <li><a href="index.html">Latest</a></li>
             <li><a href="archive.html">Archive</a></li>
