--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <img src="CR Logo.jpg" alt="">
+        <img src="CR Logo.jpg" alt="" style="display: block; margin-left: auto; margin-right: auto;">
         <ul>
             <li><a href="index.html">Latest</a></li>
             <li><a href="archive.html">Archive</a></li>
