--- a/archive.html
+++ b/archive.html
@@ -37,11 +37,14 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        
+        <img src="CR Logo.jpg" alt="" style="display: block; margin-left: auto; margin-right: auto;">
         <ul>
             <li><a href="index.html">Latest</a></li>
             <li><a href="archive.html">Archive</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
+        <p style="font-family: helvetica;">Past entries will be stored here.</p>
     </body>
 </html>
